0024829: sprops with precision throws an exception

Reason of exception is reading nonexistent element of array.

Test case for issue CR24829